--- a/index.html
+++ b/index.html
@@ -34,10 +34,8 @@
 		<img src="./assets/images/birthday-invite.png" height="200" alt="birthday cake" />
 		<hr />
 		<p>
-			<a href="./public/about.html"> About Me
-			</a>
-			<a href="./public/Contact.html">
-			Contact Me </a>
+			<a href="./public/about.html"> About Me </a>
+			<a href="./public/contact.html"> Contact Me </a>
 		</p>
 		
 		
